--- a/core/general/_section-background.scss
+++ b/core/general/_section-background.scss
@@ -10,25 +10,6 @@
 // -------------------------------------
 
 
-.row--style {
-
-
-    &-light {
-        background-color: $color--lightest;
-    }
-
-
-    &-accent {
-        background-color: $color--accent;
-    }
-
-
-    &-dark {
-        background-color: $color--darkest;
-    }
-}
-
-
 .row--background-type {
 
 
